Updating the assignment

--- a/Assignments/Assignment_1_DS.ipynb
+++ b/Assignments/Assignment_1_DS.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Assignment -1 - DS.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/neeleshkshukla/SHALA2020/blob/master/Assignments/Assignment_1_DS.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -70,7 +81,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import numpy as np"
       ],
       "execution_count": 0,
       "outputs": []
@@ -92,15 +103,35 @@
       "metadata": {
         "id": "a2lJdRf8x9f2",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 153
+        },
+        "outputId": "d30fe357-02f5-4915-b35e-ee04af6fcc14"
       },
       "source": [
-        "\n",
-        "\n",
-        "\n"
+        "c = np.arange(100)\n",
+        "print(\"c = {}\".format(c))\n",
+        "d = np.zeros((3,3))\n",
+        "print(\"d = {}\".format(d))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "c = [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+            " 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47\n",
+            " 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71\n",
+            " 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95\n",
+            " 96 97 98 99]\n",
+            "d = [[0. 0. 0.]\n",
+            " [0. 0. 0.]\n",
+            " [0. 0. 0.]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -117,14 +148,32 @@
       "metadata": {
         "id": "Krhm4bVE7RET",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "e9985a76-2466-40db-b09d-18a45820c5f9"
       },
       "source": [
         "e = [[1,2,3],[4,5,6],[7,8,9]]\n",
-        "\n"
+        "\n",
+        "e = np.array(e)\n",
+        "print(\"e = {}\".format(e))\n",
+        "print(type(e))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "e = [[1 2 3]\n",
+            " [4 5 6]\n",
+            " [7 8 9]]\n",
+            "<class 'numpy.ndarray'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -141,13 +190,37 @@
       "metadata": {
         "id": "DvaLckI49aBV",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        },
+        "outputId": "4eaf8ade-b356-460b-f1e0-71f3b83d723a"
       },
       "source": [
-        ""
+        "f = np.ones((5,5))\n",
+        "g = np.eye(5)\n",
+        "print(\"f = {}\".format(f))\n",
+        "print(\"g = {}\".format(g))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "f = [[1. 1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 1.]]\n",
+            "g = [[1. 0. 0. 0. 0.]\n",
+            " [0. 1. 0. 0. 0.]\n",
+            " [0. 0. 1. 0. 0.]\n",
+            " [0. 0. 0. 1. 0.]\n",
+            " [0. 0. 0. 0. 1.]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -164,13 +237,28 @@
       "metadata": {
         "id": "I71vtO9bA9Pi",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "25d637dd-4f3f-41b8-b612-937c4d6ad07b"
       },
       "source": [
-        ""
+        "h = c.reshape(10,10)\n",
+        "c_dash = h.flatten()\n",
+        "if c.shape == c_dash.shape:\n",
+        "  print('YES')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "YES\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
