--- a/Assignments/Assignment_1_DS.ipynb
+++ b/Assignments/Assignment_1_DS.ipynb
@@ -103,7 +103,7 @@
       "metadata": {
         "id": "a2lJdRf8x9f2",
         "colab_type": "code",
-        "outputId": "f3b564cb-e653-4dbe-ad46-8a1a8d83745f",
+        "outputId": "2a4ae72d-f1d9-4bea-f145-51c39a42ba66",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 153
@@ -148,7 +148,7 @@
       "metadata": {
         "id": "Krhm4bVE7RET",
         "colab_type": "code",
-        "outputId": "86eae452-7919-4511-ae50-251dc41171fb",
+        "outputId": "4e651a3c-06e9-4119-ebee-3578466939ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -190,7 +190,7 @@
       "metadata": {
         "id": "DvaLckI49aBV",
         "colab_type": "code",
-        "outputId": "9dff7709-18bc-4e2f-a182-d2805ebaf9e1",
+        "outputId": "b412722b-64f3-46a8-f987-0c3cb736bb14",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
@@ -237,7 +237,7 @@
       "metadata": {
         "id": "I71vtO9bA9Pi",
         "colab_type": "code",
-        "outputId": "7242c41f-1da6-4232-eb94-ecdb6e9fe21c",
+        "outputId": "13bee05a-206a-445c-d95a-7a1970f708b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -279,7 +279,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 442
         },
-        "outputId": "2c8a2716-3571-49cc-dfe5-8c66eb8a0561"
+        "outputId": "6bb2b7f9-baca-4bad-e31b-ec78ff56e048"
       },
       "source": [
         "A = np.random.rand(2,10,5)\n",
@@ -293,30 +293,30 @@
           "output_type": "stream",
           "text": [
             "shape = (5, 2, 10)\n",
-            "A_dash = [[[0.8637805  0.86296565 0.00217793 0.54165048 0.30883506 0.64893131\n",
-            "   0.34770617 0.75194838 0.70438305 0.56925737]\n",
-            "  [0.55836552 0.8133499  0.93238244 0.83521725 0.50896671 0.93294535\n",
-            "   0.19202659 0.85548344 0.21824789 0.20877072]]\n",
+            "A_dash = [[[0.16281291 0.93090279 0.21699569 0.35392217 0.55021813 0.86703242\n",
+            "   0.85734691 0.63322242 0.49906502 0.61764352]\n",
+            "  [0.25461882 0.47557073 0.50332922 0.82782194 0.97138529 0.8463403\n",
+            "   0.9477793  0.04415476 0.00841254 0.83344054]]\n",
             "\n",
-            " [[0.67595591 0.17144813 0.60795899 0.51085073 0.53079437 0.46181996\n",
-            "   0.04086116 0.15437066 0.99659807 0.86344028]\n",
-            "  [0.98767373 0.19349938 0.13568033 0.13684982 0.68737885 0.9062748\n",
-            "   0.82334164 0.75967703 0.89021766 0.21649854]]\n",
+            " [[0.13841428 0.0543918  0.66477641 0.39045339 0.82139468 0.30845291\n",
+            "   0.73079739 0.80560574 0.57909414 0.82800403]\n",
+            "  [0.67736919 0.91226529 0.8633051  0.08232959 0.04994486 0.31664894\n",
+            "   0.35223407 0.70445365 0.70239303 0.86344545]]\n",
             "\n",
-            " [[0.23430523 0.43565141 0.82421505 0.29401294 0.51840617 0.22282474\n",
-            "   0.49386698 0.00347342 0.26278465 0.52762147]\n",
-            "  [0.47494314 0.07251342 0.37779606 0.31184997 0.05137511 0.42277998\n",
-            "   0.49516041 0.74349352 0.16333717 0.68782073]]\n",
+            " [[0.7154079  0.67520819 0.04669037 0.87679807 0.19535086 0.52010523\n",
+            "   0.62799112 0.48287449 0.35124915 0.70374883]\n",
+            "  [0.55439063 0.70797174 0.62582643 0.35896682 0.93475171 0.81008278\n",
+            "   0.69081805 0.08988186 0.86497093 0.25070658]]\n",
             "\n",
-            " [[0.88445494 0.58973719 0.10890756 0.38366807 0.90807921 0.61709605\n",
-            "   0.99787311 0.01496717 0.84290701 0.64881127]\n",
-            "  [0.73500065 0.94263724 0.96584216 0.26023989 0.99687333 0.2379659\n",
-            "   0.80562286 0.78720076 0.63779018 0.70184618]]\n",
+            " [[0.61048117 0.08421401 0.25931817 0.32614648 0.5235602  0.99681432\n",
+            "   0.31082446 0.36473002 0.83127214 0.95257146]\n",
+            "  [0.27252616 0.0896554  0.13525127 0.60785842 0.34124768 0.44220582\n",
+            "   0.1538591  0.19972112 0.76196468 0.29017217]]\n",
             "\n",
-            " [[0.97772092 0.78296751 0.60675315 0.60257983 0.11984006 0.47057237\n",
-            "   0.60430779 0.59753373 0.17666556 0.60892044]\n",
-            "  [0.17359527 0.66236957 0.2282389  0.98015724 0.46937875 0.02756281\n",
-            "   0.6295262  0.14934982 0.35463241 0.62282907]]]\n"
+            " [[0.19819001 0.31379042 0.24637064 0.49494972 0.42493757 0.39552271\n",
+            "   0.52221787 0.17520261 0.13919663 0.95421111]\n",
+            "  [0.59411019 0.91179666 0.39905218 0.68657433 0.87981173 0.83538337\n",
+            "   0.28480775 0.10425579 0.28206357 0.66842834]]]\n"
           ],
           "name": "stdout"
         }
@@ -347,7 +347,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 255
         },
-        "outputId": "0b73568e-9b20-410e-85d3-dc22401e8232"
+        "outputId": "7be0a7f6-8aea-4e92-c500-69f30f7c174b"
       },
       "source": [
         "np.random.seed(0)\n",
@@ -412,7 +412,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 153
         },
-        "outputId": "4cd59621-4622-4482-d03c-14efaca0ab16"
+        "outputId": "95e13941-295a-4e00-d9f5-4d77171409ef"
       },
       "source": [
         "print('mean of row = {}'.format(np.mean(X, axis=1)))\n",
@@ -482,7 +482,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "d6559fb9-97ce-447f-a83f-03839f6b0c36"
+        "outputId": "91061937-ba49-4d5f-f71c-faa088dbc154"
       },
       "source": [
         "print('Determinant:', np.linalg.det(Y))"
@@ -507,7 +507,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "bbde1f97-f0b7-4940-9a29-bd329a007a12"
+        "outputId": "0534d74c-3bbc-4f9d-b3e7-60853594876c"
       },
       "source": [
         "print('Rank:', np.linalg.matrix_rank(Y))"
@@ -532,7 +532,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "154c930e-74f5-4bdc-baaf-051e302ebee4"
+        "outputId": "9bd72891-e0d4-45a7-8a8f-15390de15fbc"
       },
       "source": [
         "print('Diagonal elements:', Y.diagonal())"
@@ -558,7 +558,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "94c9b20a-8a0a-4629-eb7d-2c56e694059e"
+        "outputId": "42fbb62a-2ab9-4d21-adff-ae3a95f29c3e"
       },
       "source": [
         "print('Trace:', Y.trace())"
@@ -583,7 +583,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "bc8b0ce1-877c-443b-f43c-4dbc4462d16c"
+        "outputId": "b23c4057-a491-485b-e28e-b2d75476b551"
       },
       "source": [
         "print('Eigen values:', np.linalg.eigvals(Y))"
@@ -611,7 +611,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 731
         },
-        "outputId": "641c31ac-3e16-459f-8e70-4cad895c145e"
+        "outputId": "da5b86a3-7c2e-42ec-c992-5d2ae99dae3e"
       },
       "source": [
         "u, s, vh = np.linalg.svd(Y)\n",
@@ -680,7 +680,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 357
         },
-        "outputId": "f3729a5a-a798-4f0d-b85a-c1d7c9cc3f25"
+        "outputId": "f256e0d2-8512-4e5f-854f-7679faeac052"
       },
       "source": [
         "try:\n",
@@ -727,7 +727,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 187
         },
-        "outputId": "99f6efc4-5f00-4e9a-bf31-c93159d308a9"
+        "outputId": "7086eee9-4a12-4e2e-ce81-29f0df27a3dd"
       },
       "source": [
         "print('matrix_mul', np.matmul(Y, X))"
@@ -761,7 +761,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 391
         },
-        "outputId": "aff00311-43e0-4d9d-83b0-2e684a3ef3bb"
+        "outputId": "048e4bd1-e7de-4fa2-a6dc-bd0be4b0a677"
       },
       "source": [
         "print('Element-wise multiplication of  𝑌  and its inverse(or pseudo-inverse)\\n')\n",
@@ -869,7 +869,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "34afe9dc-3fa6-4d48-c17f-301efff8bd4e"
+        "outputId": "722741cd-984b-4203-d576-fa227adc4b42"
       },
       "source": [
         "#Download dataset from: http://biostat.mc.vanderbilt.edu/wiki/pub/Main/DataSets/titanic3.csv\n",
@@ -1067,7 +1067,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 813
         },
-        "outputId": "33d956df-7f33-41de-dea9-ec022d4a9170"
+        "outputId": "9c1d45dc-dfe6-49ba-bbfe-a948a28a3bec"
       },
       "source": [
         "titanic_data_new = titanic_df.copy()\n",
@@ -1584,25 +1584,25 @@
           "base_uri": "https://localhost:8080/",
           "height": 296
         },
-        "outputId": "e2853efc-f4af-42a2-e040-8f15c5327df8"
+        "outputId": "75e1beea-63ac-4981-cbc6-4e22ee177a77"
       },
       "source": [
         "#titanic_data_new.plot(y='age',color='red', use_index=True)\n",
         "titanic_data_new.reset_index().plot(x = 'index', y = 'age')"
       ],
-      "execution_count": 33,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f47c9e4c898>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f337e3c55f8>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 27
         },
         {
           "output_type": "display_data",
@@ -1628,24 +1628,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 296
         },
-        "outputId": "0b115b1d-29e4-4596-b36a-2f62d9280011"
+        "outputId": "3ef5d678-dff8-4329-e361-d72dc0a2de94"
       },
       "source": [
         "titanic_data_new.reset_index().plot.scatter(x ='index', y ='fare')"
       ],
-      "execution_count": 35,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f47c9d92be0>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f337e35d940>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 28
         },
         {
           "output_type": "display_data",
@@ -1726,7 +1726,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 300
         },
-        "outputId": "fad30d2c-d05e-4962-eda8-3ddd9e7fa3ed"
+        "outputId": "7f5711b2-954e-47ba-ea11-38bbb97a41e6"
       },
       "source": [
         "x = np.arange(-3*np.pi,3*np.pi,0.1)\n",
@@ -1736,7 +1736,7 @@
         "plt.figure(figsize=(10,10)) \n",
         "plt.show()"
       ],
-      "execution_count": 39,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1783,7 +1783,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 296
         },
-        "outputId": "13289635-2236-4d5f-ce24-d6f0d4e31bf2"
+        "outputId": "1f38768a-b167-486d-dc55-363f889e2d5f"
       },
       "source": [
         "dt = 0.05  # sampling interval\n",
@@ -1799,7 +1799,7 @@
         "plt.figure(figsize=(10,10)) \n",
         "plt.show()"
       ],
-      "execution_count": 55,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1836,7 +1836,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 606
         },
-        "outputId": "be167bec-91b8-4bd4-ebf6-2429e1439374"
+        "outputId": "e10d59bf-7b84-46b6-89f0-5a26b69bf736"
       },
       "source": [
         "fig, ax = plt.subplots(2, 2, figsize=(10, 10))\n",
@@ -1850,7 +1850,7 @@
         "plt.legend()\n",
         "fig.show()"
       ],
-      "execution_count": 65,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "display_data",
