--- a/Assignments/DataScience/L4/DS_L4_22_Apr_Assignment.ipynb
+++ b/Assignments/DataScience/L4/DS_L4_22_Apr_Assignment.ipynb
@@ -38,7 +38,11 @@
       "metadata": {
         "id": "DHfUkvD3KcNN",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "a7290248-7372-4d9e-9cf5-e2e5bbc2db69"
       },
       "source": [
         "import numpy as np\n",
@@ -47,8 +51,17 @@
         "from matplotlib import pyplot as plt\n",
         "import seaborn as sns"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -63,6 +76,94 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x5_DI_p65pcz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "91188119-de41-4f1b-ccce-4c85af0aaccd"
+      },
+      "source": [
+        "data.head()"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0.019404</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0.043634</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>0.023797</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3</td>\n",
+              "      <td>0.444340</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4</td>\n",
+              "      <td>0.578160</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   0         1\n",
+              "0  0  0.019404\n",
+              "1  1  0.043634\n",
+              "2  2  0.023797\n",
+              "3  3  0.444340\n",
+              "4  4  0.578160"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -83,10 +184,86 @@
         "colab": {}
       },
       "source": [
-        ""
+        "def exponential_pdf(lambd, x):\n",
+        "  return lambd * np.exp(-1*lambd*x)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uc-6GxKJ5sxL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def linkelihood(values, lamd):\n",
+        "  likelihood = 1\n",
+        "  for x in values:\n",
+        "    likelihood = likelihood * exponential_pdf(lamd, x)\n",
+        "  return likelihood"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tti8twfP8-Lf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "c71f8f8a-efb2-4fea-eeed-e2cb63e0b4a8"
+      },
+      "source": [
+        "## lambda 1\n",
+        "likelihood_lambda_1 = linkelihood(data[1].values, 1)\n",
+        "print('likelihood with lambda 1:', likelihood_lambda_1)\n",
+        "print('log likelihood with lambda 1:', np.log(likelihood_lambda_1))"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "likelihood with lambda 1: 5.52106601597132e-22\n",
+            "log likelihood with lambda 1: -48.94830108538966\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Gmmmp5l29bnI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "8283038d-37f5-4190-e0b0-9ca8c4e3857a"
+      },
+      "source": [
+        "## lambda 2\n",
+        "likelihood_lambda_2 = linkelihood(data[1].values, 2)\n",
+        "print('likelihood with lambda 2:', likelihood_lambda_2)\n",
+        "print('log likelihood with lambda 2:', np.log(likelihood_lambda_2))"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "likelihood with lambda 2: 3.864074103681613e-13\n",
+            "log likelihood with lambda 2: -28.581884114784785\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -113,6 +290,182 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fQkPHvEv5viy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "8cd662d7-689e-45c8-94b2-92dec9a19eb7"
+      },
+      "source": [
+        "sample1.head()"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>-0.179278</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0.236714</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>0.255502</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3</td>\n",
+              "      <td>-0.029321</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4</td>\n",
+              "      <td>0.004818</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   0         1\n",
+              "0  0 -0.179278\n",
+              "1  1  0.236714\n",
+              "2  2  0.255502\n",
+              "3  3 -0.029321\n",
+              "4  4  0.004818"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yr5dnKr65yFJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "7220b48c-a8c9-4d47-d4bc-97a440b50f24"
+      },
+      "source": [
+        "sample2.head()"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0.680541</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0.436810</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>0.604089</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3</td>\n",
+              "      <td>0.518702</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4</td>\n",
+              "      <td>0.479711</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   0         1\n",
+              "0  0  0.680541\n",
+              "1  1  0.436810\n",
+              "2  2  0.604089\n",
+              "3  3  0.518702\n",
+              "4  4  0.479711"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "yIvOH3yWiTU9",
@@ -130,7 +483,13 @@
         "colab": {}
       },
       "source": [
-        ""
+        "mean1 = sample1[1].mean()\n",
+        "mean2 = sample2[1].mean()\n",
+        "var1 = sample1[1].var()\n",
+        "var2 = sample2[1].var()\n",
+        "n1 = sample1.size\n",
+        "n2 = sample2.size\n",
+        "alpha = 0.05"
       ],
       "execution_count": 0,
       "outputs": []
@@ -153,7 +512,9 @@
         "colab": {}
       },
       "source": [
-        ""
+        "# Compute degree of freedom\n",
+        "# Referece: https://www.itl.nist.gov/div898/handbook/eda/section3/eda353.htm\n",
+        "degree_of_feeedom = (((var1/n1) + (var2/n2))**2)/( (((var1/n1)**2)/(n1-1)) + (((var2/n2)**2)/(n2-1)) )"
       ],
       "execution_count": 0,
       "outputs": []
@@ -173,13 +534,30 @@
       "metadata": {
         "id": "ST8J42mAfn0R",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "553a4b3b-c41f-4a9d-901f-90b4ff6cdb96"
       },
       "source": [
-        ""
+        "t_stat = (mean1 - mean2)/np.sqrt((var1/n1)+(var2/n2))\n",
+        "crtitical_value = stats.t.pdf((1-alpha)/2, degree_of_feeedom)\n",
+        "if np.abs(t_stat) > crtitical_value:\n",
+        "  print('YES')\n",
+        "else:\n",
+        "  print('NO')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "YES\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
